Update some visual tests and add html linting

--- a/test/visual/badge.html
+++ b/test/visual/badge.html
@@ -8,30 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<!--
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
--->
-
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../js/util.js"></script>
-<script type="text/javascript" src="../../js/drag.js"></script>
-<script type="text/javascript" src="../../js/collapse.js"></script>
-<script type="text/javascript" src="../../js/dropdown.js"></script>
-<script type="text/javascript" src="../../js/tab.js"></script>
-<script type="text/javascript" src="../../js/affix.js"></script>
-<script type="text/javascript" src="../../js/tooltip.js"></script>
-<script type="text/javascript" src="../../js/popover.js"></script>
-<script type="text/javascript" src="../../js/modal.js"></script>
-<script type="text/javascript" src="../../js/tab-responsive.js"></script>
-<script type="text/javascript" src="../../js/accordion.js"></script>
-<script type="text/javascript" src="../../js/slideshow.js"></script>
-<script type="text/javascript" src="../../js/scrollspy.js"></script>
-<script type="text/javascript" src="../../js/alert.js"></script>
-<script type="text/javascript" src="../../js/lazy.js"></script>
-<script type="text/javascript" src="../../js/slider.js"></script>
-<script type="text/javascript" src="../../js/equalize.js"></script>
-<script type="text/javascript" src="../../js/common.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 </head>
 <body>
@@ -41,89 +19,105 @@
 <h1>Badge</h1>
 
 <h2>Auto Sizing</h2>
-<h1>Example heading <span class="badge">New</span></h1>
-<h2>Example heading <span class="badge">New</span></h2>
-<h3>Example heading <span class="badge">New</span></h3>
-<h4>Example heading <span class="badge">New</span></h4>
-<h5>Example heading <span class="badge">New</span></h5>
-<h6>Example heading <span class="badge">New</span></h6>
+
+<div class="mb-1">
+    <h1>Example heading <span class="badge">New</span></h1>
+    <h2>Example heading <span class="badge">New</span></h2>
+    <h3>Example heading <span class="badge">New</span></h3>
+    <h4>Example heading <span class="badge">New</span></h4>
+    <h5>Example heading <span class="badge">New</span></h5>
+    <h6>Example heading <span class="badge">New</span></h6>
+</div>
 
 <h2>Color</h2>
-<span class="badge">Default</span>
-<span class="badge badge-primary">Primary</span>
-<span class="badge badge-secondary">Secondary</span>
-<span class="badge badge-success">Success</span>
-<span class="badge badge-info">Info</span>
-<span class="badge badge-warning">Warning</span>
-<span class="badge badge-danger">Danger</span>
-<span class="badge badge-light">Light</span>
-<span class="badge badge-dark">Dark</span>
+<p>
+    <span class="badge">Default</span>
+    <span class="badge badge-primary">Primary</span>
+    <span class="badge badge-secondary">Secondary</span>
+    <span class="badge badge-success">Success</span>
+    <span class="badge badge-info">Info</span>
+    <span class="badge badge-warning">Warning</span>
+    <span class="badge badge-danger">Danger</span>
+    <span class="badge badge-light">Light</span>
+    <span class="badge badge-dark">Dark</span>
+</p>
 
 <h2>Outline</h2>
-<span class="badge badge-outline">Default</span>
-<span class="badge badge-outline-primary">Primary</span>
-<span class="badge badge-outline-secondary">Secondary</span>
-<span class="badge badge-outline-success">Success</span>
-<span class="badge badge-outline-info">Info</span>
-<span class="badge badge-outline-warning">Warning</span>
-<span class="badge badge-outline-danger">Danger</span>
-<span class="badge badge-outline-light">Light</span>
-<span class="badge badge-outline-dark">Dark</span>
+
+<p>
+    <span class="badge badge-outline">Default</span>
+    <span class="badge badge-outline-primary">Primary</span>
+    <span class="badge badge-outline-secondary">Secondary</span>
+    <span class="badge badge-outline-success">Success</span>
+    <span class="badge badge-outline-info">Info</span>
+    <span class="badge badge-outline-warning">Warning</span>
+    <span class="badge badge-outline-danger">Danger</span>
+    <span class="badge badge-outline-light">Light</span>
+    <span class="badge badge-outline-dark">Dark</span>
+</p>
 
 <h2>Anchor</h2>
-<a href="#" class="badge">Default</a>
-<a href="#" class="badge badge-primary">Primary</a>
-<a href="#" class="badge badge-secondary">Secondary</a>
-<a href="#" class="badge badge-success">Success</a>
-<a href="#" class="badge badge-info">Info</a>
-<a href="#" class="badge badge-warning">Warning</a>
-<a href="#" class="badge badge-danger">Danger</a>
-<a href="#" class="badge badge-light">Light</a>
-<a href="#" class="badge badge-dark">Dark</a>
+
+<p>
+    <a href="#" class="badge">Default</a>
+    <a href="#" class="badge badge-primary">Primary</a>
+    <a href="#" class="badge badge-secondary">Secondary</a>
+    <a href="#" class="badge badge-success">Success</a>
+    <a href="#" class="badge badge-info">Info</a>
+    <a href="#" class="badge badge-warning">Warning</a>
+    <a href="#" class="badge badge-danger">Danger</a>
+    <a href="#" class="badge badge-light">Light</a>
+    <a href="#" class="badge badge-dark">Dark</a>
+</p>
 
 <h2>Outline Anchor</h2>
-<a href="#" class="badge badge-outline">Default</a>
-<a href="#"  class="badge badge-outline-primary">Primary</a>
-<a href="#"  class="badge badge-outline-secondary">Secondary</a>
-<a href="#"  class="badge badge-outline-success">Success</a>
-<a href="#"  class="badge badge-outline-info">Info</a>
-<a href="#"  class="badge badge-outline-warning">Warning</a>
-<a href="#"  class="badge badge-outline-danger">Danger</a>
-<a href="#"  class="badge badge-outline-light">Light</a>
-<a href="#"  class="badge badge-outline-dark">Dark</a>
+
+<p>
+    <a href="#" class="badge badge-outline">Default</a>
+    <a href="#" class="badge badge-outline-primary">Primary</a>
+    <a href="#" class="badge badge-outline-secondary">Secondary</a>
+    <a href="#" class="badge badge-outline-success">Success</a>
+    <a href="#" class="badge badge-outline-info">Info</a>
+    <a href="#" class="badge badge-outline-warning">Warning</a>
+    <a href="#" class="badge badge-outline-danger">Danger</a>
+    <a href="#" class="badge badge-outline-light">Light</a>
+    <a href="#" class="badge badge-outline-dark">Dark</a>
+</p>
 
 <h2>Pill</h2>
-<span class="badge badge-pill">Default</span>
-<span class="badge badge-pill badge-primary">Primary</span>
-<span class="badge badge-pill badge-secondary">Secondary</span>
-<span class="badge badge-pill badge-success">Success</span>
-<span class="badge badge-pill badge-info">Info</span>
-<span class="badge badge-pill badge-warning">Warning</span>
-<span class="badge badge-pill badge-danger">Danger</span>
-<span class="badge badge-pill badge-light">Light</span>
-<span class="badge badge-pill badge-dark">Dark</span>
+<p>
+    <span class="badge badge-pill">Default</span>
+    <span class="badge badge-pill badge-primary">Primary</span>
+    <span class="badge badge-pill badge-secondary">Secondary</span>
+    <span class="badge badge-pill badge-success">Success</span>
+    <span class="badge badge-pill badge-info">Info</span>
+    <span class="badge badge-pill badge-warning">Warning</span>
+    <span class="badge badge-pill badge-danger">Danger</span>
+    <span class="badge badge-pill badge-light">Light</span>
+    <span class="badge badge-pill badge-dark">Dark</span>
+</p>
 
 <h2>Badge Group</h2>
-
-<div class="badge-group">
+<div class="badge-group mb-1">
     <span class="badge badge-dark">version</span>
     <span class="badge badge-success">v4.0.0</span>
 </div>
 
-<div class="badge-group">
+<div class="badge-group mb-1">
     <span class="badge badge-dark">build</span>
     <span class="badge badge-danger">error</span>
 </div>
 
-<div class="badge-group">
+<div class="badge-group mb-1">
     <span class="badge badge-dark">response</span>
     <span class="badge badge-light">none</span>
 </div>
 
-<div class="badge-group">
+<div class="badge-group mb-1">
     <span class="badge badge-primary">comments</span>
     <span class="badge badge-outline-primary">9</span>
 </div>
 
+</div>
 </body>
 </html>
