--- a/test/visual/form.html
+++ b/test/visual/form.html
@@ -8,19 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
-
-<script type="text/javascript" src="../../docs/assets/js/vendor/holder.min.js"></script>
-<script type="text/javascript">
-Holder.addTheme("gray", {
-    bg: "#999",
-    fg: "#111",
-    size: 12,
-    font: 'sans-serif',
-    fontweight: "normal"
-});
-</script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 <style>
 .select-sizing .btn {
@@ -297,39 +286,39 @@ Holder.addTheme("gray", {
         <div class="p-0_5 bg-dark"><input type="text" class="form-control" placeholder="something"></div>
     </div>
     <div class="col">
-        <div class="p-0_5"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-primary"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-secondary"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-success"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-info"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-warning"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-danger"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-light"><select type="text" class="custom-select"><option>Select</option></select></div>
-        <div class="p-0_5 bg-dark"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-primary"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-secondary"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-success"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-info"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-warning"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-danger"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-light"><select class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-dark"><select class="custom-select"><option>Select</option></select></div>
     </div>
 </div>
 <div class="row mb-1">
     <div class="col">
-        <div class="p-0_5"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-primary"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-secondary"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-success"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-info"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-warning"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-danger"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-light"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
-        <div class="p-0_5 bg-dark"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5"><label class="custom-file"><input type="file" id="file0" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-primary"><label class="custom-file"><input type="file" id="file1" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-secondary"><label class="custom-file"><input type="file" id="file2" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-success"><label class="custom-file"><input type="file" id="file3" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-info"><label class="custom-file"><input type="file" id="file4" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-warning"><label class="custom-file"><input type="file" id="file5" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-danger"><label class="custom-file"><input type="file" id="file6" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-light"><label class="custom-file"><input type="file" id="file7" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-dark"><label class="custom-file"><input type="file" id="file8" class="custom-file-input"><span class="custom-file-control"></span></label></div>
     </div>
     <div class="col">
         <div class="p-0_5"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-primary"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-secondary"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-success"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-info"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-warning"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-danger"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-light"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
-        <div class="p-0_5 bg-dark"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-primary"><div class="input-group"><span class="input-group-addon" id="color-addon1">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-secondary"><div class="input-group"><span class="input-group-addon" id="color-addon2">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-success"><div class="input-group"><span class="input-group-addon" id="color-addon3">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-info"><div class="input-group"><span class="input-group-addon" id="color-addon4">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-warning"><div class="input-group"><span class="input-group-addon" id="color-addon5">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-danger"><div class="input-group"><span class="input-group-addon" id="color-addon6">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-light"><div class="input-group"><span class="input-group-addon" id="color-addon7">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-dark"><div class="input-group"><span class="input-group-addon" id="color-addon8">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
     </div>
 </div>
 
