--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -8,22 +8,10 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
-
-<script type="text/javascript" src="../../docs/assets/js/vendor/holder.min.js"></script>
-<script type="text/javascript">
-Holder.addTheme("gray", {
-    bg: "#999",
-    fg: "#111",
-    size: 12,
-    font: 'sans-serif',
-    fontweight: "normal"
-});
-</script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 <style>
-
 .input-group {
     margin-bottom: 1rem;
 }
@@ -744,7 +732,7 @@ Holder.addTheme("gray", {
     <span class="custom-file-control"></span>
   </label>
   <div class="input-group-addon">
-    <span class="input-group-text" id="">Upload</span>
+    <span class="input-group-text">Upload</span>
   </div>
 </div>
 
