--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -8,8 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 </head>
 <body>
 
