--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -8,8 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 </head>
 <body>
@@ -17,7 +17,9 @@
 <div class="container mb-1">
     <h1>Form: Inline</h1>
 
-    <form class="form-inline">
+    <h2>Text Input and Button</h2>
+
+    <form class="form-inline  mb-1">
         <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
             <label for="inlineName0" class="form-control-label me-sm-0_5">Name</label>
             <input type="text" class="form-control" id="inlineName0" placeholder="Jane Doe">
@@ -29,12 +31,12 @@
         <button type="submit" class="btn btn-primary">Send invitation</button>
     </form>
 
-    <hr />
+    <h2>Text Input, Checkbox, and Button</h2>
 
-    <form class="form-inline form-inline-checkbox">
+    <form class="form-inline form-inline-checkbox mb-1">
         <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
             <label class="sr-only" for="inlineEmail1">Email address</label>
-            <input type="email" class="form-control" id="inlineEmail1" placeholder="Enter email">
+            <input type="email" class="form-control" id="inlineEmail1" placeholder="Email Address">
         </div>
         <div class="form-group mb-0_5 me-sm-0_5 mb-sm-0">
             <label class="sr-only" for="inlinePassword1">Password</label>
@@ -48,9 +50,9 @@
         <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
 
-    <hr />
+    <h2>Input Group</h2>
 
-    <form class="form-inline">
+    <form class="form-inline mb-1">
         <div class="form-group me-sm-0_5">
             <label class="sr-only" for="inputAmount2">Amount (in dollars)</label>
             <div class="input-group">
@@ -62,9 +64,9 @@
         <button type="submit" class="btn btn-primary">Transfer cash</button>
     </form>
 
-    <hr />
+    <h2>Standard Select</h2>
 
-    <form class="form-inline">
+    <form class="form-inline mb-1">
         <label class="me-sm-0_5" for="inlinePref4">Preference</label>
         <select class="form-control mb-0_5 me-sm-0_5 mb-sm-0" id="inlinePref4">
             <option selected>Choose...</option>
@@ -80,9 +82,9 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
-    <hr />
+    <h2>Custom Select</h2>
 
-    <form class="form-inline">
+    <form class="form-inline mb-1">
         <label class="me-sm-0_5" for="inlinePref5">Preference</label>
         <select class="custom-select mb-0_5 me-sm-0_5 mb-sm-0" id="inlinePref5">
             <option selected>Choose...</option>
