--- a/test/visual/media-object.html
+++ b/test/visual/media-object.html
@@ -8,11 +8,11 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/holder.min.js"></script>
-<script type="text/javascript">
+<script src="../../docs/assets/js/vendor/holder.min.js"></script>
+<script>
 Holder.addTheme("gray", {
     bg: "#999",
     fg: "#111",
