--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -9,29 +9,29 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <!--
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 -->
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../js/util.js"></script>
-<script type="text/javascript" src="../../js/drag.js"></script>
-<script type="text/javascript" src="../../js/collapse.js"></script>
-<script type="text/javascript" src="../../js/dropdown.js"></script>
-<script type="text/javascript" src="../../js/tab.js"></script>
-<script type="text/javascript" src="../../js/affix.js"></script>
-<script type="text/javascript" src="../../js/tooltip.js"></script>
-<script type="text/javascript" src="../../js/popover.js"></script>
-<script type="text/javascript" src="../../js/modal.js"></script>
-<script type="text/javascript" src="../../js/tab-responsive.js"></script>
-<script type="text/javascript" src="../../js/accordion.js"></script>
-<script type="text/javascript" src="../../js/slideshow.js"></script>
-<script type="text/javascript" src="../../js/scrollspy.js"></script>
-<script type="text/javascript" src="../../js/alert.js"></script>
-<script type="text/javascript" src="../../js/lazy.js"></script>
-<script type="text/javascript" src="../../js/slider.js"></script>
-<script type="text/javascript" src="../../js/equalize.js"></script>
-<script type="text/javascript" src="../../js/common.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../js/util.js"></script>
+<script src="../../js/drag.js"></script>
+<script src="../../js/collapse.js"></script>
+<script src="../../js/dropdown.js"></script>
+<script src="../../js/tab.js"></script>
+<script src="../../js/affix.js"></script>
+<script src="../../js/tooltip.js"></script>
+<script src="../../js/popover.js"></script>
+<script src="../../js/modal.js"></script>
+<script src="../../js/tab-responsive.js"></script>
+<script src="../../js/accordion.js"></script>
+<script src="../../js/slideshow.js"></script>
+<script src="../../js/scrollspy.js"></script>
+<script src="../../js/alert.js"></script>
+<script src="../../js/lazy.js"></script>
+<script src="../../js/slider.js"></script>
+<script src="../../js/equalize.js"></script>
+<script src="../../js/common.js"></script>
 
 </head>
 <body class="pb-2">
