--- a/test/visual/progress.html
+++ b/test/visual/progress.html
@@ -8,8 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 <style>
 .progress + .progress {
@@ -22,6 +22,8 @@
 
 <div class="container">
     <h1>Progress</h1>
+
+    <h2>Basic</h2>
 
     <div class="mb-1">
         <div class="progress">
@@ -41,7 +43,7 @@
         </div>
     </div>
 
-    <hr />
+    <h2>With Labels</h2>
 
     <div class="mb-1">
         <div class="progress">
@@ -61,18 +63,46 @@
         </div>
     </div>
 
-    <hr />
+    <h3>Colors</h3>
 
-    <div class="mb-1">
-        <div class="progress" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress" style=height: 25px;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+    <div class="progress mb-1">
+        <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
 
-    <hr / >
+    <h2>Striped</h2>
+
+    <div class="progress mb-1">
+        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="progress mb-1">
+        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+
+    <h2>Stacked</h2>
 
     <div class="mb-1">
         <div class="progress">
@@ -82,7 +112,7 @@
         </div>
     </div>
 
-    <hr />
+    <h2>Transition</h2>
 
     <div class="progress">
         <div id="transition-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -108,9 +138,15 @@
     });
     </script>
 
-    <hr />
+    <h2>Custom Size</h2>
 
     <div class="mb-1">
+        <div class="progress" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+        <div class="progress" style="height: 25px;">
+            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
         </div>
