--- a/test/visual/table.html
+++ b/test/visual/table.html
@@ -788,22 +788,61 @@
     </tbody>
 </table>
 
-<h2>Consolidate Color Test</h2>
-<table class="table table-bordered table-hover">
+<h2>Contextual Hover Colors</h2>
+<table class="table table-hover table-bordered">
     <tbody>
         <tr>
             <th scope="row">Default</th>
             <td>Cell</td>
             <td>Cell</td>
         </tr>
-        <tr class="context-bg-primary">
+        <tr class="table-active">
             <th scope="row">Active</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-primary">
+            <th scope="row">Primary</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-secondary">
+            <th scope="row">Secondary</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-success">
+            <th scope="row">Success</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-info">
+            <th scope="row">Info</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-warning">
+            <th scope="row">Warning</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-danger">
+            <th scope="row">Danger</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-light">
+            <th scope="row">Light</th>
+            <td>Cell</td>
+            <td>Cell</td>
+        </tr>
+        <tr class="table-dark">
+            <th scope="row">Dark</th>
             <td>Cell</td>
             <td>Cell</td>
         </tr>
     </tbody>
 </table>
-
 <h2>Nested Table</h2>
 <table class="table">
     <tr>
