V4 more color rework (#266)
* add contrast check

* drop palette-context-*()

* cleanup

* quick cleanup for form validation

* shadow tweaks

* split up control and context themes, add per component contextual color map

* a few doc coloring and layout tweaks

* Update some visual tests and add html linting

* break out btn and badge outline themes

* allow for removing context themes

* merge maps againts empty defaults

* argh, fix that

* move themes into component files, some settings rename and reorder

* update test

* add some doc

--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -8,8 +8,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 </head>
 <body>
 
@@ -498,7 +498,7 @@
     <a href="#" class="list-item list-item-action list-item-info">Info list item</a>
     <a href="#" class="list-item list-item-action list-item-warning">Warning list item</a>
     <a href="#" class="list-item list-item-action list-item-danger">Danger list item</a>
-    <a href="#" class="list-item list-item-action list-item-list">Light list item</a>
+    <a href="#" class="list-item list-item-action list-item-light">Light list item</a>
     <a href="#" class="list-item list-item-action list-item-dark">Dark list item</a>
 </div>
 
@@ -509,7 +509,7 @@
     <a href="#" class="list-item list-item-action list-item-info">Info list item</a>
     <a href="#" class="list-item list-item-action list-item-warning">Warning list item</a>
     <a href="#" class="list-item list-item-action list-item-danger">Danger list item</a>
-    <a href="#" class="list-item list-item-action list-item-list">Light list item</a>
+    <a href="#" class="list-item list-item-action list-item-light">Light list item</a>
     <a href="#" class="list-item list-item-action list-item-dark">Dark list item</a>
 </div>
 
