--- a/test/visual/switch.html
+++ b/test/visual/switch.html
@@ -9,8 +9,8 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../dist/js/figuration.js"></script>
+<script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 </head>
 <body>
@@ -163,7 +163,7 @@
 <h2>Colors</h2>
 <div class="form-group form-inline">
     <label class="switch me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Default</span>
     </label>
@@ -185,7 +185,7 @@
 </div>
 <div class="form-group form-inline">
     <label class="switch switch-primary me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Primary</span>
     </label>
@@ -207,7 +207,7 @@
 </div>
 <div class="form-group form-inline">
     <label class="switch switch-secondary me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Secondary</span>
     </label>
@@ -229,7 +229,7 @@
 </div>
 <div class="form-group form-inline">
     <label class="switch switch-success me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Success</span>
     </label>
@@ -251,7 +251,7 @@
 </div>
 <div class="form-group form-inline">
     <label class="switch switch-info me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Info</span>
     </label>
@@ -273,7 +273,7 @@
 </div>
 <div class="form-group form-inline">
     <label class="switch switch-warning me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Warning</span>
     </label>
@@ -295,7 +295,7 @@
 </div>
 <div class="form-group form-inline">
     <label class="switch switch-danger me-1">
-        <input type="checkbox" class="switch-input">
+        <input type="checkbox" class="switch-input" checked>
         <span class="switch-control"></span>
         <span class="switch-description ms-0_25">Danger</span>
     </label>
@@ -315,7 +315,50 @@
         <span class="switch-description ms-0_25">Disabled Checked Danger</span>
     </label>
 </div>
-
+<div class="form-group form-inline">
+    <label class="switch switch-light me-1">
+        <input type="checkbox" class="switch-input" checked>
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Light</span>
+    </label>
+    <label class="switch switch-rounded switch-light me-1">
+        <input type="checkbox" class="switch-input">
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Rounded Light</span>
+    </label>
+    <label class="switch switch-light me-1">
+        <input type="checkbox" class="switch-input" disabled>
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Disabled Light</span>
+    </label>
+    <label class="switch switch-light me-1">
+        <input type="checkbox" class="switch-input" disabled checked>
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Disabled Checked Light</span>
+    </label>
+</div>
+<div class="form-group form-inline">
+    <label class="switch switch-dark me-1">
+        <input type="checkbox" class="switch-input" checked>
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Dark</span>
+    </label>
+    <label class="switch switch-rounded switch-dark me-1">
+        <input type="checkbox" class="switch-input">
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Rounded Dark</span>
+    </label>
+    <label class="switch switch-dark me-1">
+        <input type="checkbox" class="switch-input" disabled>
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Disabled Dark</span>
+    </label>
+    <label class="switch switch-dark me-1">
+        <input type="checkbox" class="switch-input" disabled checked>
+        <span class="switch-control"></span>
+        <span class="switch-description ms-0_25">Disabled Checked Dark</span>
+    </label>
+</div>
 </div>
 
 </body>
