remove more `text-hide()` items

--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -261,17 +261,12 @@ body {
          -o-transition: all 0.1s;
             transition: all 0.1s;
 }
-
 .player-notime .player-time-current,
 .player-notime .player-time-duration,
 .player-notime .player-seek,
 .player-live .player-time-duration,
 .player-live .player-seek {
-    font: 0/0 a;
-    color: transparent;
-    text-shadow: none;
-    background-color: transparent;
-    border: 0;
+    visibility: hidden;
 }
 
 .player-description {
