--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -81,6 +81,25 @@
     </div>
 </div>
 
+<button class="btn btn-primary mt-1" type="button" data-cfw="modal" data-cfw-modal-target="#modal-noanim" data-cfw-modal-animate="false">animate="false" modal</button>
+<div class="modal" id="modal-noanim">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" data-cfw-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <button class="btn btn-primary mt-1" type="button" data-cfw="modal" data-cfw-modal-target="#modal1">Launch scrolling modal</button>
 <div class="modal" id="modal1">
     <div class="modal-dialog">
