fix compiled download link

--- a/get-started/download/index.html
+++ b/get-started/download/index.html
@@ -327,7 +327,7 @@
 
         </div>
         <div class="card-footer text-sm-center">
-<a href="https://github.com/cast-org/figuration/releases/download/v3.0.5/figuration-v3.0.5-dist.zip" class="btn btn-info" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download compiled 3.0.5');">Download Figuration</a>
+<a href="https://github.com/cast-org/figuration/releases/download/v3.0.5/figuration-3.0.5-dist.zip" class="btn btn-info" onclick="ga('send', 'event', 'Get Started', 'Download', 'Download compiled 3.0.5');">Download Figuration</a>
         </div> <!-- /.card-footer -->
       </div> <!-- /.card -->
     </div>
