start per component sizing with button

--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -124,28 +124,28 @@ Anchor variants:<br />
 <h2>Sizes</h2>
 
 <p>
-    <button type="button" class="btn btn-primary btn-xs">Extra Small button</button>
-    <button type="button" class="btn btn-primary btn-sm">Small button</button>
+    <button type="button" class="btn btn-primary btn-xsmall">Extra Small button</button>
+    <button type="button" class="btn btn-primary btn-small">Small button</button>
     <button type="button" class="btn btn-primary">Standard button</button>
-    <button type="button" class="btn btn-primary btn-lg">Large button</button>
-    <button type="button" class="btn btn-primary btn-xl">Extra Large button</button>
+    <button type="button" class="btn btn-primary btn-large">Large button</button>
+    <button type="button" class="btn btn-primary btn-xlarge">Extra Large button</button>
 </p>
 <p>
-    <button type="button" class="btn btn-outline-info btn-xs">Extra Small button <span class="caret" aria-hidden="true"></span></button>
-    <button type="button" class="btn btn-outline-info btn-sm">Small button <span class="caret" aria-hidden="true"></span></button>
+    <button type="button" class="btn btn-outline-info btn-xsmall">Extra Small button <span class="caret" aria-hidden="true"></span></button>
+    <button type="button" class="btn btn-outline-info btn-small">Small button <span class="caret" aria-hidden="true"></span></button>
     <button type="button" class="btn btn-outline-info">Standard button <span class="caret" aria-hidden="true"></span></button>
-    <button type="button" class="btn btn-outline-info btn-lg">Large button <span class="caret" aria-hidden="true"></span></button>
-    <button type="button" class="btn btn-outline-info btn-xl">Extra Large button <span class="caret" aria-hidden="true"></span></button>
+    <button type="button" class="btn btn-outline-info btn-large">Large button <span class="caret" aria-hidden="true"></span></button>
+    <button type="button" class="btn btn-outline-info btn-xlarge">Extra Large button <span class="caret" aria-hidden="true"></span></button>
 </p>
 
 <h2>Block</h2>
 
 <p>
-    <button type="button" class="btn btn-primary btn-xl btn-block">Block level button</button>
-    <button type="button" class="btn btn-success btn-lg btn-block">Block level button</button>
+    <button type="button" class="btn btn-primary btn-xlarge btn-block">Block level button</button>
+    <button type="button" class="btn btn-success btn-large btn-block">Block level button</button>
     <button type="button" class="btn btn-info btn-block">Block level button</button>
-    <button type="button" class="btn btn-warning btn-sm btn-block">Block level button</button>
-    <button type="button" class="btn btn-danger btn-xs btn-block">Block level button</button>
+    <button type="button" class="btn btn-warning btn-small btn-block">Block level button</button>
+    <button type="button" class="btn btn-danger btn-xsmall btn-block">Block level button</button>
 </p>
 
 </div>
